commit con logo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Megablog 2.0</title>
-    <link rel="stylesheet" href="css/estilos.css" />
-</head>
+
+<!-- saved from url=(0129)https://static.platzi.com/media/tmp/class-files/github/hyperblog/hyperblog-996396cf687b3d1ea33e5d5fdf564194f4e04005/blogpost.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>Bienvenido a Hyperblog 2.0</title>
+<link rel="stylesheet" href="./blogpost_files/estilos.css">
+<script async="" src="./blogpost_files/api.js.descarga"></script></head>
 <body>
-    <div id ="container">
-        <div id="cabecera">
-            Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
-        </div>
-        <div id="post">
-            <h1>Este es el titulo atractivo e 
-            interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde
-            vamos a explicar las cosas increibles
-            que se pueden hacer con ramas</p>
-            <p>Los blogs son la mejor forma de
-            compartir informacion y tus ideas.
-            Mucho mas que ir a conferencias o salir en
-            Youtube. Excepto si eres un rockstar. Pero
-            estadisticamente no lo eres.... por ahora</p>
-        </div>    
-    </div>
-</body>
-</html>
+<div id="container">
+<div id="cabecera">
+<img id="logo" src="./blogpost_files/dragon.png">
+Hyperblog
+<span id="tagline">Tu blog de cabecera</span>
+</div>
+<div id="post">
+<h1>Este es el título atractivo e interesante del post</h1>
+<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+<p>Suscribete y dale like</p>
+</div>
+</div>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'7227629c686d11b3',m:'g7_u.8dHXoIEJ50BxXvL4yE2sC9LqjZz6v41a_FRKNE-1656429404-0-AWOu/mmhjPxiUdU7j7SR768tJrgkFgjOlPiGUwDTEgjO8cclxMxHEmrWVMFPz8FhpMQrCz2kD0tKJQ5r074Vrja4FF31GyvutoUOELH00NxG8wlDAdTMjdV0jpJ3RG05/AJolX1N7zHTUbp9AGWb7N10r6MzmGFGrt0n4h3ZksMuCGMdcw3wR3TTyIs/RwDrb/8P0eHqr6ROT4yPKsvemntB1T/raCEE85ih4avF1RXycPoS9bydvVPPKm3Q3hgRHw==',s:[0x81ed37638e,0x64d690fe7d],}})();</script>
+
+</body></html>
